syntax = "proto3";

package mailer;

service Mailer {
  rpc SendMail (MailRequest) returns (MailResponse) {}
}

message MailRequest {
  string sender = 1;
  string recipient = 2;
  string subject = 3;
  repeated string cc = 5;
  repeated string bcc = 6;
}

message MailResponse {
  bool success = 1;
  string message = 2;
}
